force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/Zuora_Quote_to_ZObject_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Zuora Quote to ZObject Mapping</label>
</CustomObject>