force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Enable_for_New_Sub_With_Bill_Acc__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_New_Sub_With_Bill_Acc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for New Sub With Bill Acc</label>
    <type>Checkbox</type>
</CustomField>