force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Enable_for_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for Renewals</label>
    <type>Checkbox</type>
</CustomField>