force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Include_In_Quoting_Flow__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Quoting_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Quoting Flow</label>
    <type>Checkbox</type>
</CustomField>