force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Zuora_Object__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Object__c</fullName>
    <label>Zuora Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>