force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Zuora_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Object_Field__c</fullName>
    <label>Zuora Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>